--- a/experiment/simulation/css/main.css
+++ b/experiment/simulation/css/main.css
@@ -1,1 +1,11 @@
-/* You CSS goes in here */
+h1{
+color:green;
+  font-family: verdana;
+}
+h2{
+color:blue;
+font-family: verdana;
+}
+a{
+font-family: courier;}
+
