--- a/experiment/simulation/css/main.css
+++ b/experiment/simulation/css/main.css
@@ -15,28 +15,16 @@ font-family: courier;}
   padding: 10px;
 }
 
-.button {
-  background-color: #4CAF50; /* Green */
-  border: none;
+a:link, a:visited {
+  background-color: #028A0F;
   color: white;
-  padding: 15px 32px;
+  padding: 14px 25px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-  -webkit-transition-duration: 0.4s; /* Safari */
-  transition-duration: 0.4s;
 }
 
-.button1:hover {
-  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
-}
-.button2:hover {
-  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
-}
-.button3:hover {
-  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+a:hover, a:active {
+  background-color: #5DBB63;
 }
 
